Добавляет анимацию и  слайдер

--- a/source/sass/blocks/languages.scss
+++ b/source/sass/blocks/languages.scss
@@ -92,4 +92,14 @@
 
     transform: rotate(-45deg);
   }
+
+  &:hover,
+  &:focus {
+    outline: none;
+
+    &::before,
+    &::after {
+      background-color: #8f2796;
+    }
+  }
 }
